src/objects/CNP_High_ProcessingTable__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processing Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_List_Price__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New List Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_List_Price__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old List Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipName>CNP_High_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Extension</label>
        <referenceTo>Product_Extension__c</referenceTo>
        <relationshipLabel>MasterData_Processing</relationshipLabel>
        <relationshipName>MasterData_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Price__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Stream__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Stream</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Created_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Staging Created By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staging_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Staging Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Ready to Process</fullName>
                </value>
                <value>
                    <fullName>Product Not Found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MasterData Processing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Price_List_Item__c</columns>
        <columns>Source_Price__c</columns>
        <columns>New_List_Price__c</columns>
        <columns>Old_List_Price__c</columns>
        <columns>Status__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Product_Extension__c</columns>
        <columns>Source_Currency__c</columns>
        <columns>Object_Currency__c</columns>
        <columns>Source_Stream__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MDP - {00000}</displayFormat>
        <label>ProcessingTable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasterData_Processing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>